--- a/01clock.html
+++ b/01clock.html
@@ -23,7 +23,7 @@
     </style>
 </head>
 
-<body class="d-flex justify-conten-center align-items-center vh-100">
+<body class="d-flex justify-content-center align-items-center vh-100">
     <div class="text-center">
         <div class="clock text-primary" id="time">--:--:--</div>
         <div class="date" id="date">Loading...</div>
